--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,11 @@
-tqdm
-pandas==1.2.3
-numpy >= 1.16.5
-statsmodels
-scipy
-sklearn==0.24.1
-pytest==6.2.3
-torch==1.8.0
-gpytorch==1.4.0
-matplotlib
-seaborn
-rpy2==3.1.0
+gpytorch == 1.4.0
+matplotlib == 3.3.4
+numpy == 1.18.5
+pandas == 1.2.3
+rpy2 == 3.1.0
+scikit_learn == 0.24.1
+scipy == 1.5.3
+seaborn == 0.11.1
+statsmodels == 0.12.2
+torch == 1.8.0
+tqdm == 4.59.0
