--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ before_install:
 # command to install dependencies
 install:
   - pip install -r requirements.txt
+  - pip install pytest
 # command to run tests
 script:
-  - pytest
+  - pytest test/test_pynm.py::TestBasic
