--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 gpytorch == 1.4.0
 matplotlib == 3.3.4
 numpy == 1.18.5
-pandas == 1.2.3
+pandas >= 1.2.3
 rpy2 == 3.1.0
 scikit_learn == 0.24.1
 scipy == 1.5.3
