--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ before_install:
 # command to install dependencies
 install:
 #  - pip install -r requirements.txt #(should work from install_requires)
+  - pip install .
   - pip install pytest
 # command to run tests
 script:
